# TAMBO-opt

./: .gitignore  mkresultdir.py  mkresultdir_allshowers.py  mkresultdir_pointcloudfm.py  mkresultdir_reconstruction.py  pyproject.toml
allshowers/: OT_match.py  OT_match.sh  OT_match2.py  OT_match3.py  README_generation.md  data_loader.py  data_sets.py  explore_output.ipynb  flow_matching.py  generate.py  generate_showers.py  generate_showers2.py  generator.py  plot2.py  preprocess_shards.py  preprocessing.py  train.py  transformer.py  util.py
conf/: allshowers_electrons.yaml  allshowers_electrons_continuous_z.yaml  allshowers_muons.yaml  allshowers_photons.yaml  pointCloudFM_electron.yaml  pointcloudfm.yaml  reconstruction.yaml
conf/AllShowers_training/: allshowers_electrons.yaml
conf/AllShowers_transformation/: allshowers_electrons.yaml  (+1 more)
job_submission_scripts/: combine_h5_files.py  postprocess_showers.py  postprocess_showers_submission.py  preprocess_showers.py  submit_jobs.py  submit_jobs_checking_logs.py  submit_jobs_write_h5_paths.py
nmax_and_dx_study/: nmax_and_dx_study.py  nmax_and_dx_study_submission.py  plot.py
optimization/: optimization.py
pointcountfm/: generate.py  inference.py  inference_cond_file_plot2.py  models.py  plots.py  trainer.py
reconstruction/: data_loader.py  flow_matching.py  inference_reconstruction.py  models.py  preprocessing.py  trainer.py
scripts_related_to_create_training_datasets/: create_h5_file_for_training.py
util/: check_isolation.py  dataset_for_reconstruction.py  dataset_for_reconstruction.sh  testing.py
(+5 files in other folders)
